--- a/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
@@ -1458,6 +1458,21 @@ msgctxt "game_options"
 msgid "2nd Joystick (2 Axes, 2 Btns)"
 msgstr "2ème Joystick (2 Axes, 2 Btns)"
 
+#. TRANSLATION: libretro/swanstation, libretro
+msgctxt "game_options"
+msgid "Choose which graphics API library to use."
+msgstr ""
+
+#. TRANSLATION: libretro/swanstation, libretro, cemu, dolphin, duckstation, ...
+msgctxt "game_options"
+msgid "GRAPHICS API"
+msgstr "API GRAPHIQUE"
+
+#. TRANSLATION: libretro/swanstation, libretro, cemu, daphne, dolphin, ...
+msgctxt "game_options"
+msgid "Vulkan"
+msgstr "Vulkan"
+
 #. TRANSLATION: libretro/swanstation, libretro/duckstation, libretro/mednafen_psx
 msgctxt "game_options"
 msgid "Enhancement. Skipping it can break some games."
@@ -5759,16 +5774,6 @@ msgctxt "game_options"
 msgid "Allows up to 7 or 12 controllers in supported games."
 msgstr "Autoriser jusqu'à 7 ou 12 contrôleurs dans les jeux pris en charge."
 
-#. TRANSLATION: libretro
-msgctxt "game_options"
-msgid "Choose which graphics API library to use."
-msgstr ""
-
-#. TRANSLATION: libretro, cemu, dolphin, duckstation, flycast, ...
-msgctxt "game_options"
-msgid "GRAPHICS API"
-msgstr "API GRAPHIQUE"
-
 #. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
 msgctxt "game_options"
 msgid "OpenGL"
@@ -5783,11 +5788,6 @@ msgstr "GLCore"
 msgctxt "game_options"
 msgid "SDL2"
 msgstr ""
-
-#. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
-msgctxt "game_options"
-msgid "Vulkan"
-msgstr "Vulkan"
 
 #. TRANSLATION: libretro
 msgctxt "game_options"
