--- a/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
@@ -1448,6 +1448,21 @@ msgctxt "game_options"
 msgid "2nd Joystick (2 Axes, 2 Btns)"
 msgstr ""
 
+#. TRANSLATION: libretro/swanstation, libretro
+msgctxt "game_options"
+msgid "Choose which graphics API library to use."
+msgstr ""
+
+#. TRANSLATION: libretro/swanstation, libretro, cemu, dolphin, duckstation, ...
+msgctxt "game_options"
+msgid "GRAPHICS API"
+msgstr ""
+
+#. TRANSLATION: libretro/swanstation, libretro, cemu, daphne, dolphin, ...
+msgctxt "game_options"
+msgid "Vulkan"
+msgstr ""
+
 #. TRANSLATION: libretro/swanstation, libretro/duckstation, libretro/mednafen_psx
 msgctxt "game_options"
 msgid "Enhancement. Skipping it can break some games."
@@ -5708,16 +5723,6 @@ msgctxt "game_options"
 msgid "Allows up to 7 or 12 controllers in supported games."
 msgstr ""
 
-#. TRANSLATION: libretro
-msgctxt "game_options"
-msgid "Choose which graphics API library to use."
-msgstr ""
-
-#. TRANSLATION: libretro, cemu, dolphin, duckstation, flycast, ...
-msgctxt "game_options"
-msgid "GRAPHICS API"
-msgstr ""
-
 #. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
 msgctxt "game_options"
 msgid "OpenGL"
@@ -5731,11 +5736,6 @@ msgstr ""
 #. TRANSLATION: libretro, libretro
 msgctxt "game_options"
 msgid "SDL2"
-msgstr ""
-
-#. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
-msgctxt "game_options"
-msgid "Vulkan"
 msgstr ""
 
 #. TRANSLATION: libretro
